	  HTML comments.
	- The current heading was not always correctly
	  substituted when used in the page header or footer.
	- When converting web pages from the GUI, the
	  table-of-contents page number preferences were
	  incorrectly used.
	- PDF page effects/transitions were not put in the right
	  part of the page dictionary, causing them not to be
	  used by the PDF reader application.


CHANGES IN HTMLDOC v1.8.23

    NEW FEATURES

	- HTMLDOC now supports a full alpha channel in PNG
	  files.
	- HTMLDOC now reports an error when a table, image, or
	  section of text overflows into an adjacent table cell
	  or off the right edge of the page.

    CHANGES

	- The NEW SHEET page comment now breaks on N-up
	  boundaries when N is greater than 1.

    BUG FIXES

	- HTMLDOC tried to format tables with no rows or
	  columns. While the HTML in technically not in error,
	  it is not exactly something you'd expect someone to
	  do.
	- HTMLDOC didn't report an error when it could not
	  find the specified title page file.
	- HTMLDOC could crash if it was unable to create its
	  output files.
	- HTMLDOC could crash when writing HTML output
	  containing unknown HTML elements.
	- HTMLDOC could crash when writing HTML output if the
	  output document had no title.
	- The htmlGetText() function used a fixed-size (10k)
	  buffer which allowed for a buffer overflow.  The new
	  code (from HTMLDOC 1.9) allocates its buffer instead.
	- The header/footer text was not centered properly if
	  the header/footer font size was different than the
	  default body font size.
	- The GUI interface incorrectly localized URLs when
	  doing a "save as" operation.
	- The PNG background color was not correct for PNG files
	  using <= 8 bits per pixel.
	- The HTML parser didn't close the current list item if
	  an intermediate block element (P, PRE, etc.) was
	  inside the previous, unterminated list item.


CHANGES IN HTMLDOC v1.8.22

    NEW FEATURES
