@@ -157,6 +157,9 @@
 	part of the page dictionary, causing them not to be
 	used by the PDF reader application.</li>
 
+	<li>The _HD_OMIT_TOC attribute was not being honored for
+	HTML output.</li>
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.23</H2>
